# CloudStorageSyncer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  QUICKSTART.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
.prompt/00.CommonProcessDefinition/: 00.DevProcess.md
.prompt/01.ProjectCommonDefinition/: 01.BasicDesign.md  02.ImplementProcess.md  03.TestProcess.md
.prompt/02.Issue/01.CreateProgramBase/: 00.Requirements.md  01.GitHubActions.md  02.Documentation.md  99.Summary.md
.prompt/02.Issue/02.AddSimpleFileUpload/: 00.Requirements.md
.prompt/02.Issue/03.AddSimpleDownloadAndDelete/: 00.Requirements.md
.prompt/02.Issue/04.AddWebInterface/: 00.Requirements.md
CommonDevPrompt/: 00.DevProcess.md
docker/: .dockerignore  .env.example  Dockerfile.frontend  README.md  config.json.example  docker-compose.yml  nginx-entrypoint.sh  nginx.conf
docs/: architecture.md  dev-guide.md
src/cloud_storage_syncer/: __init__.py  web_api.py
src/cloud_storage_syncer/cli/: __main__.py  main.py
src/cloud_storage_syncer/models/: __init__.py  config.py  delete.py  download.py  storage.py  upload.py
src/cloud_storage_syncer/services/: __init__.py  config_service.py  s3_service.py
src/cloud_storage_syncer/web/: __init__.py  auth.py  models.py  routes.py
src/web-ui/: index.html  package-lock.json  package.json  vite.config.js
src/web-ui/src/: App.css  App.jsx
test-ui-api-e2e/: README.md  config.sh  run_tests.sh  test_auth.sh  test_files_delete.sh  test_files_download.sh  test_files_list.sh  test_files_search.sh  test_files_upload.sh
test-ui-frontend-e2e/: .gitignore  debug-delete.sh  debug-single.sh  docker-compose.yml  mock-server.py  package-lock.json  package.json  playwright.config.js  run-e2e-tests.sh  run-simple.sh
test-ui-frontend-e2e/tests/: basic.spec.js  file-upload.spec.js
test-ui-frontend-e2e/tests/FileListPage/: file-delete.spec.js  file-list-display.spec.js  file-search.spec.js
test-ui-frontend-e2e/tests/LoginPage/: login-failure.spec.js  login-success.spec.js
test-ui-frontend-e2e/tests/testscripts/: basic-login-fileList.spec.js
test-ui-frontend-e2e/wiremock/__files/: basic-login-fileList-files-list-401.json  basic-login-fileList-files-list.json  file-upload-files-upload-error.json  file-upload-files-upload.json
tests/: test_basic.py  test_models.py
(+75 files in other folders)
